--- a/index.html
+++ b/index.html
@@ -5,17 +5,21 @@
     <meta charset="UTF-8">
     <meta http-equiv="X-UA-Compatible" content="IE=edge">
     <meta name="viewport" content="width=device-width, initial-scale=1.0">
-    <title>Portfólio Matheus Augusto Fonseca</title>
+    <title>Portfólio - Matheus Augusto Fonseca</title>
 </head>
 
 <body>
+    <h1>Olá, meu nome é Matheus Augusto Fonseca</h1>
+
+<img src="./foto_pessoal.jpg" alt="Foto pessoal do autor" width="300px">
+
 
 </body>
 
 </html>
 
 <!-- Seu Portfólio Web deve ter as seguintes informações:
-Seu nome completo;
+Seu nome completo; OK
 Uma foto atual sua, acompanhada de um texto alternativo, que deve ser a descrição da foto que você está usando;
 Uma breve descrição sobre você, destacando algumas informações como nacionalidade e a cidade/estado onde mora;
 Uma lista de habilidades que você possui, com destaque para aquela de que você mais se orgulha;
