--- a/index.html
+++ b/index.html
@@ -9,26 +9,37 @@
 </head>
 
 <body>
-    <h1>Olá, meu nome é Matheus Augusto Fonseca</h1>
+    <h1>Olá, Bem vindo ao meu portfólio</h1>
+    <br>
+    <h2>Meu nome é: <a href="#foto-retrato"> Matheus Augusto Fonseca</a></h2>
 
-    <img src="./foto_pessoal.jpg" alt="Foto pessoal do autor" width="300px">
+    <img id="foto-retrato" src="./foto_pessoal.jpg" alt="Foto pessoal do autor" width="300px">
     <!-- <br> -->
     <p><em>Retrato tirado em Paraty-RJ</em></p>
     <br>
     <hr>
     <p>
-        Eu nasci em Belo Horizonte-MG, mas já morei em: Salvador-BA, Feira de Santana-BA, São Bernardo do Campo-SP e
+        Nasci em Belo Horizonte-MG, mas já morei em: Salvador-BA, Feira de Santana-BA, São Bernardo do Campo-SP e
         atualmente, resido em São Paulo-SP.
     </p>
 <hr>
 <p>
     <h2>habilidades:</h2>
     <ul>
-        <li>Tenho um aprendisado rápido</li>
-        <li><strong>Sou um bom ouvinte</strong></li>
-        <li>Pro ativo</li>
-        <li>Sei cozinhar (alguns pratos melhor que outros)</li>
-        <li>Toco um pouquinho de violão</li>
+        <li>Tenho um aprendisado rápido;</li>
+        <li><strong>Sou um bom ouvinte</strong>;</li>
+        <li>Proativo;</li>
+        <li>Sei cozinhar (alguns pratos melhor que outros);</li>
+        <li>Toco um pouquinho de violão.</li>
+    </ul>
+</p>
+<br>
+<hr>
+<p>
+    Me acompanhe em:
+    <ul>
+        <li><a href="https://www.linkedin.com/in/matheus-fonseca-4745a317a/" target="_blank">Linkedin</a></li>
+        <li><a href="https://github.com/MatheusAugustoFonseca" target="_blank">GitHub</a></li>
     </ul>
 </p>
 </body>
@@ -42,5 +53,5 @@ Uma breve descrição sobre você, destacando algumas informações como naciona
 Uma lista de habilidades que você possui, com destaque para aquela de que você mais se orgulha;ok
 Um link interno para a sua foto;
 Um link externo para algum blog de que você goste, que abra em uma nova aba;
-Partes do seu portfólio destacadas com negrito e/ou itálico;
+Partes do seu portfólio destacadas com negrito e/ou itálico;ok
 Um índice com links internos para as diferentes seções do seu portfólio. -->
